# ktexteditor-multicursors

./: CMakeLists.txt  README.md  TODO  ktexteditor_multicursor.desktop  ktexteditor_multicursor_config.desktop  multicursor.cpp  multicursor.h  multicursorconfig.cpp  multicursorconfig.h  multicursorplugin.cpp  multicursorplugin.h  multicursorui.rc  multicursorview.cpp  multicursorview.h
